# SWT-VIIIB-QT

./: README.md  开发笔记.md  通用板-通信协议-第十三版20250813（增加下位机判断触头状态）.docx
DeviceSimulator/DeviceSimulator/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
DeviceSimulator/DeviceSimulator/udp_dev/: MockDevice.cpp  MockDevice.h  ProtocolCodec.cpp  ProtocolCodec.h  ProtocolHandler.cpp  ProtocolHandler.h  ProtocolTypes.h
SWT_VIIIB_NEW/SWT_VIIIB_NEW/: CMakeLists.txt  mainwindow - 副本.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui.bak
SWT_VIIIB_NEW/SWT_VIIIB_NEW/comm_dev/: ICommunicator.cpp  ICommunicator.h
SWT_VIIIB_NEW/SWT_VIIIB_NEW/comm_dev/protocol/: ProtocolCodec.cpp  ProtocolHandler.cpp  ProtocolHandler.h  ProtocolTypes.h  voltageregdialog.cpp  voltageregdialog.h  voltageregdialog.ui
SWT_VIIIB_NEW/SWT_VIIIB_NEW/comm_dev/tcp/: TcpCommunicator.cpp  TcpCommunicator.h
SWT_VIIIB_NEW/SWT_VIIIB_NEW/comm_dev/udp/: UdpCommunicator.cpp  UdpCommunicator.h
